apply plugin: 'application'

sourceCompatibility = 21
mainClassName = 'dev.michey.expo.server.ServerLauncher'
eclipse.project.name = appName + '-server'
sourceSets.main.resources.srcDirs += [ rootProject.file('assets_shared').path ]

dependencies {
	implementation project(':shared')

	api "com.esotericsoftware:kryo:$kryoVersion"
	api "com.github.crykn:kryonet:$kryoNetVersion"
	api "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
	api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
	api "com.github.tommyettinger:make_some_noise:0.4"
	api "com.github.implicit-invocation:jbump:v1.0.2"
	//api "com.github.KleeSup:KleeSwept:$kleesweptVersion"
	api "com.github.oshi:oshi-core:6.4.9"
	api "org.slf4j:slf4j-nop:2.0.9"
}

jar {
	archiveBaseName.set(appName)
// the duplicatesStrategy matters starting in Gradle 7.0; this setting works.
	duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
	dependsOn configurations.runtimeClasspath
	from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
// these "exclude" lines remove some unnecessary duplicate files in the output JAR.
	exclude('META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA')
	dependencies {
		exclude('META-INF/INDEX.LIST', 'META-INF/maven/**')
	}
// setting the manifest makes the JAR runnable.
	manifest {
		attributes 'Main-Class': project.mainClassName
	}
// this last step may help on some OSes that need extra instruction to make runnable JARs.
	doLast {
		file(archiveFile).setExecutable(true, false)
	}
}

// Equivalent to the jar task; here for compatibility with gdx-setup.
task dist(dependsOn: [jar]) {
}
